# CurveFit

./: .readthedocs.yaml  Old Templet Fitter.ipynb  README.md  README.rst  RRL Fitter.ipynb  Templet Fitter.ipynb  Templet fit.ipynb  amp_else.fits  amp_rrab.fits  gldrrl_res.fits  newtemps.txt  oldselftmp.py  p_amp_upsilon.fits  psearch_pyc.pyd  pyproject.toml  rrl_res.fits  rrlfit.py  rrlres7.fits  selftemplate.py  setup.cfg  setup.py  stdlc_export.tar  table2.fits  test.ipynb  tmps.csv  upsil_res_rrab.fits  upsilon.fits  upsilon.ipynb
.ipynb_checkpoints/: Old Templet Fitter-checkpoint.ipynb  RRL Fitter-checkpoint.ipynb  Template Fitter-checkpoint.ipynb  Templet Fitter-checkpoint.ipynb  test-checkpoint.ipynb  upsilon-checkpoint.ipynb
Layden tmp results/: 100047_2267_parameters.csv  100413_6560_parameters.csv  100555_10583_parameters.csv  100826_1474_parameters.csv  100828_28520_parameters.csv  101068_6327_parameters.csv  101313_10442_parameters.csv  101825_934_parameters.csv  102337_12820_parameters.csv  102338_5844_parameters.csv  102731_1034_parameters.csv  102848_12429_parameters.csv  102849_2399_parameters.csv  102924_1422_parameters.csv  103434_1546_parameters.csv  103496_95_parameters.csv  103873_2607_parameters.csv  104381_4246_parameters.csv  104382_4469_parameters.csv  104897_5071_parameters.csv  105917_959_parameters.csv  105919_7718_parameters.csv  106429_1409_parameters.csv  106429_89_parameters.csv  106430_9551_parameters.csv  106432_8993_parameters.csv  107453_1174_parameters.csv  107453_309_parameters.csv  114727_3420_parameters.csv  (+1338 more)
docs/: conf.py  (+4 more)
(+902 files in other folders)
