[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "leavitt"
version = "1.0.2"
dependencies = [
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
  "dill",
  "dlnpyutils",
  "numba",
  "astro-datalab",
  "statsmodels",
  "emcee",
  "healpy",
  "sphinx-astropy",
]
requires-python = ">=3.11"
authors = [
  {name = "Kyle Matt", email = "kyle.matt@montana.edu"},
  {name = "David Nidever", email = "dnidever@montana.edu"},
  {name = "Pol Massana", email = "pol.massana@montana.edu"},  
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "Variable Stars"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["software","variable stars","time series"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://leavitt.readthedocs.io/"
Repository = "https://github.com/NideverAstroResearch/leavitt"
#Issues = "https://github.com/NideverAstroResearch/leavitt/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
